syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (Message) returns (SendMessageResponse);
  rpc StreamMessages (User) returns (stream Message);
  rpc ChatStream (stream Message) returns (stream Message);
}

message User {
  string userId = 1;
}

message Message {
  string senderId = 1;
  string receiverId = 2;
  string messageContent = 3;
  string timestamp = 4;
}

message SendMessageResponse {
  bool success = 1;
}
